Start implementing websocket logic